--- a/Demo/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Demo/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -144,20 +144,18 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/OldClassroom/Maps
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/OldClassroom/Maps/Classroom
+LastLevel=/Game/Maps/Classroom_chenVersion
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
 
 [RootWindow]
-ScreenPosition=X=135.200 Y=96.000
-WindowSize=X=1286.400 Y=726.400
+ScreenPosition=X=135.000 Y=96.000
+WindowSize=X=1286.000 Y=726.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -174,7 +172,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../DEMO/GameJ/Demo/Content/OldClassroom/Maps
+UNR=../../../../../GameJAM/GameJ/Demo/Content/Maps
 BRUSH=../../../../../../DEMO/Demo/Content/
 FBX=../../../../../../DEMO/Demo/Content/
 FBXAnim=../../../../../../DEMO/Demo/Content/
@@ -184,7 +182,7 @@ GenericOpen=../../../../../../DEMO/Demo/Content/
 GenericSave=../../../../../../DEMO/Demo/Content/
 MeshImportExport=../../../../../../DEMO/Demo/Content/
 WorldRoot=../../../../../../DEMO/Demo/Content/
-Level=../../../../../../DEMO/Demo/Content/
+Level=../../../../../GameJAM/GameJ/Demo/Content/Maps
 Project=C:/Program Files/Epic Games/UE_4.26/
 
 [ModuleFileTracking]
@@ -1004,18 +1002,31 @@ SceneOutliner.TimeStamp=2021.10.26-15.47.01
 SceneOutliner.LastCompileMethod=Unknown
 HierarchicalLODOutliner.TimeStamp=2021.10.26-15.46.52
 HierarchicalLODOutliner.LastCompileMethod=Unknown
+Voice.TimeStamp=2021.05.19-02.06.36
+Voice.LastCompileMethod=Unknown
+MovieSceneCapture.TimeStamp=2021.05.19-02.06.30
+MovieSceneCapture.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2021.05.19-02.06.22
+BlueprintGraph.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2021.05.19-02.06.27
+HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/OldClassroom/Maps/Classroom
-MRUItem1=/Game/Maps/Classroom002
+MRUItem0=/Game/Maps/Classroom_chenVersion
+MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem2=/Game/Maps/Classroom002
+MRUItem3=/Game/OldClassroom/Maps/Classroom
 
 [ContentBrowserRecent]
-MRUItem0=/Game/OldClassroom/Maps/Classroom
-MRUItem1=/Game/Maps/Classroom002
-MRUItem2=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem3=/Game/OldClassroom/Meshes/SM_desk
-MRUItem4=/Game/OldClassroom/Meshes/SM_cart
-MRUItem5=/Game/OldClassroom/Meshes/SM_teacherDesk
+MRUItem0=/Game/Maps/Classroom_chenVersion
+MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem2=/Game/ThirdPersonBP/ThirdPersonOverview
+MRUItem3=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem4=/Game/Maps/Classroom002
+MRUItem5=/Game/OldClassroom/Maps/Classroom
+MRUItem6=/Game/OldClassroom/Meshes/SM_desk
+MRUItem7=/Game/OldClassroom/Meshes/SM_cart
+MRUItem8=/Game/OldClassroom/Meshes/SM_teacherDesk
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1349,6 +1360,100 @@ DirectionalLight.LightFunction=True
 DirectionalLight.Tags=True
 DirectionalLight.Cooking=True
 DirectionalLight.Actor=True
+LevelSequenceActor.TransformCommon=True
+LevelSequenceActor.General=True
+LevelSequenceActor.Playback=True
+LevelSequenceActor.Cinematic=True
+LevelSequenceActor.BurnInOptions=True
+LevelSequenceActor.Aspect Ratio=True
+LevelSequenceActor.BindingOverrides=True
+LevelSequenceActor.Replication=True
+LevelSequenceActor.InstanceData=True
+LevelSequenceActor.Collision=True
+LevelSequenceActor.Actor=True
+ThirdPersonCharacter_C.TransformCommon=True
+ThirdPersonCharacter_C.Animation=True
+ThirdPersonCharacter_C.Mesh=True
+ThirdPersonCharacter_C.Clothing=True
+ThirdPersonCharacter_C.Physics=True
+ThirdPersonCharacter_C.MasterPoseComponent=True
+ThirdPersonCharacter_C.Lighting=True
+ThirdPersonCharacter_C.ClothingSimulation=True
+ThirdPersonCharacter_C.SkinWeights=True
+ThirdPersonCharacter_C.Navigation=True
+ThirdPersonCharacter_C.VirtualTexture=True
+ThirdPersonCharacter_C.Tags=True
+ThirdPersonCharacter_C.Activation=True
+ThirdPersonCharacter_C.Cooking=True
+ThirdPersonCharacter_C.Character Movement (General Settings)=True
+ThirdPersonCharacter_C.Character Movement: Walking=True
+ThirdPersonCharacter_C.Character Movement: Jumping / Falling=True
+ThirdPersonCharacter_C.Character Movement (Networking)=True
+ThirdPersonCharacter_C.Character Movement: Swimming=True
+ThirdPersonCharacter_C.Character Movement: Flying=True
+ThirdPersonCharacter_C.Character Movement: Custom Movement=True
+ThirdPersonCharacter_C.Character Movement (Rotation Settings)=True
+ThirdPersonCharacter_C.Character Movement: Physics Interaction=True
+ThirdPersonCharacter_C.Character Movement=True
+ThirdPersonCharacter_C.Character Movement: Avoidance=True
+ThirdPersonCharacter_C.RootMotion=True
+ThirdPersonCharacter_C.Character Movement: NavMesh Movement=True
+ThirdPersonCharacter_C.NavMovement=True
+ThirdPersonCharacter_C.Velocity=True
+ThirdPersonCharacter_C.PlanarMovement=True
+ThirdPersonCharacter_C.MovementComponent=True
+ThirdPersonCharacter_C.Shape=True
+ThirdPersonCharacter_C.Materials=True
+TextRenderActor.TransformCommon=True
+TextRenderActor.Materials=True
+TextRenderActor.Text=True
+TextRenderActor.Lighting=True
+TextRenderActor.Navigation=True
+TextRenderActor.Tags=True
+TextRenderActor.Rendering=True
+TextRenderActor.Cooking=True
+TextRenderActor.Replication=True
+TextRenderActor.Input=True
+TextRenderActor.Actor=True
+CharacterMovementComponent.Variable=True
+CharacterMovementComponent.Sockets=True
+CharacterMovementComponent.Character Movement (General Settings)=True
+CharacterMovementComponent.Character Movement: Walking=True
+CharacterMovementComponent.Character Movement: Jumping / Falling=True
+CharacterMovementComponent.ComponentTick=True
+CharacterMovementComponent.Character Movement (Networking)=True
+CharacterMovementComponent.Character Movement: Swimming=True
+CharacterMovementComponent.Character Movement: Flying=True
+CharacterMovementComponent.Character Movement: Custom Movement=True
+CharacterMovementComponent.Character Movement (Rotation Settings)=True
+CharacterMovementComponent.Character Movement: Physics Interaction=True
+CharacterMovementComponent.Character Movement=True
+CharacterMovementComponent.Character Movement: Avoidance=True
+CharacterMovementComponent.RootMotion=True
+CharacterMovementComponent.Character Movement: NavMesh Movement=True
+CharacterMovementComponent.NavMovement=True
+CharacterMovementComponent.Velocity=True
+CharacterMovementComponent.PlanarMovement=True
+CharacterMovementComponent.MovementComponent=True
+CharacterMovementComponent.Tags=True
+CharacterMovementComponent.ComponentReplication=True
+CharacterMovementComponent.Activation=True
+CharacterMovementComponent.Cooking=True
+CharacterMovementComponent.Events=True
+WorldSettings.Tick=True
+WorldSettings.LODSystem=True
+WorldSettings.Audio=True
+WorldSettings.Rendering=True
+WorldSettings.VR=True
+WorldSettings.Broadphase=True
+WorldSettings.Physics=True
+WorldSettings.World=True
+WorldSettings.Lightmass=True
+WorldSettings.GameMode=True
+WorldSettings.PrecomputedVisibility=True
+ThirdPersonOverview_C.Testing=True
+ThirdPersonOverview_C.Tutorial=True
+ThirdPersonOverview_C.Stages=True
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -1362,16 +1467,22 @@ PreserveScaleRatio=True
 InstalledPlugins=XRVisualization
 
 [PlacementMode]
+RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter;
+RecentlyPlaced=/Game/OldClassroom/Meshes/SM_desk.SM_desk;
+RecentlyPlaced=/Game/OldClassroom/Meshes/SM_chalk.SM_chalk;
+RecentlyPlaced=/Game/OldClassroom/Meshes/SM_chair.SM_chair;
+RecentlyPlaced=/Game/StarterContent/Props/SM_Shelf.SM_Shelf;
 RecentlyPlaced=/Game/OldClassroom/Meshes/SM_teacherDesk.SM_teacherDesk;
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=LoadErrors
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=1
 /Game/OldClassroom/Meshes/SM_teacherDesk.SM_teacherDesk=1
 /Game/OldClassroom/Meshes/SM_cart.SM_cart=1
 /Game/OldClassroom/Meshes/SM_desk.SM_desk=1
+/Game/ThirdPersonBP/ThirdPersonOverview.ThirdPersonOverview=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1419,4 +1530,12 @@ EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Obj
 Object=
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
+CharacterMovementComponent=
+PawnMovementComponent=
+NavMovementComponent=
+MovementComponent=
+ActorComponent=
+
+[DetailCustomWidgetExpansion]
+WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 
