--- a/Demo/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Demo/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -146,12 +146,13 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
+ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonBP/Blueprints
 
 [EditorStartup]
 LastLevel=/Game/Maps/Classroom_chenVersion
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=135.000 Y=96.000
