--- a/Demo/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Demo/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -145,12 +145,12 @@ ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Waveli/Character
+ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonBP/Blueprints
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonBP/Blueprints
 
 [EditorStartup]
-LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+LastLevel=/Game/Maps/Classroom_chenVersion
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -174,7 +174,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=D:/GameJam2021/GameJ/Demo/Content/ThirdPersonBP/Maps
+UNR=../../../../../GameJAM/GameJ/Demo/Content/Maps
 BRUSH=../../../../../../DEMO/Demo/Content/
 FBX=../../../../../../DEMO/Demo/Content/
 FBXAnim=../../../../../../DEMO/Demo/Content/
@@ -1018,19 +1018,25 @@ BlueprintGraph.TimeStamp=2021.10.18-16.41.11
 BlueprintGraph.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem1=/Game/Maps/Classroom002
-MRUItem2=/Game/OldClassroom/Maps/Classroom
+MRUItem0=/Game/Maps/Classroom_chenVersion
+MRUItem1=/Game/OldClassroom/Maps/Classroom
+MRUItem2=/Game/OldClassroom/Maps/Demonstation
+MRUItem3=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem4=/Game/Maps/Classroom002
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Waveli/Character/BP_AnimMan_Character_Mini
-MRUItem1=/Game/AdvancedLocomotionV4/Blueprints/CharacterLogic/ALS_AnimMan_CharacterBP
-MRUItem2=/Game/Maps/Classroom002
-MRUItem3=/Game/OldClassroom/Maps/Classroom
-MRUItem4=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem5=/Game/OldClassroom/Meshes/SM_desk
-MRUItem6=/Game/OldClassroom/Meshes/SM_cart
-MRUItem7=/Game/OldClassroom/Meshes/SM_teacherDesk
+MRUItem0=/Game/Maps/Classroom_chenVersion
+MRUItem1=/Game/OldClassroom/Maps/Classroom
+MRUItem2=/Game/OldClassroom/Maps/Demonstation
+MRUItem3=/Game/ThirdPerson/Meshes/RampMaterial
+MRUItem4=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem5=/Game/Waveli/Character/BP_AnimMan_Character_Mini
+MRUItem6=/Game/AdvancedLocomotionV4/Blueprints/CharacterLogic/ALS_AnimMan_CharacterBP
+MRUItem7=/Game/Maps/Classroom002
+MRUItem8=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem9=/Game/OldClassroom/Meshes/SM_desk
+MRUItem10=/Game/OldClassroom/Meshes/SM_cart
+MRUItem11=/Game/OldClassroom/Meshes/SM_teacherDesk
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1687,6 +1693,21 @@ CapsuleComponent.Mobile=False
 CapsuleComponent.AssetUserData=False
 K2Node_VariableGet.Variable=True
 K2Node_VariableGet.Events=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.PhysicalMaterialMask=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.Group Sorting=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.ImportSettings=True
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -1701,6 +1722,7 @@ InstalledPlugins=NodeGraphAssistant
 InstalledPlugins=XRVisualization
 
 [PlacementMode]
+RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter;
 RecentlyPlaced=/Game/Waveli/Character/BP_AnimMan_Character_Mini.BP_AnimMan_Character_Mini;
 RecentlyPlaced=/Game/OldClassroom/Meshes/SM_teacherDesk.SM_teacherDesk;
 
@@ -1713,6 +1735,7 @@ LastLogListing=LoadErrors
 /Game/OldClassroom/Meshes/SM_cart.SM_cart=1
 /Game/OldClassroom/Meshes/SM_desk.SM_desk=1
 /Game/ThirdPersonBP/ThirdPersonOverview.ThirdPersonOverview=1
+/Game/ThirdPerson/Meshes/RampMaterial.RampMaterial=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1824,7 +1847,7 @@ MagicLeapSDKSettings=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object="\"Object.PostProcess.PostProcessSettings\" "
+Object=
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[2]\" \"Object.Bindings.ActionMappings.ActionMappings[5]\" \"Object.Bindings.ActionMappings.ActionMappings[6]\" \"Object.Bindings.ActionMappings.ActionMappings[7]\" \"Object.Bindings.ActionMappings.ActionMappings[8]\" \"Object.Bindings.ActionMappings.ActionMappings[9]\" \"Object.Bindings.ActionMappings.ActionMappings[10]\" \"Object.Bindings.ActionMappings.ActionMappings[11]\" \"Object.Bindings.ActionMappings.ActionMappings[14]\" \"Object.Bindings.ActionMappings.ActionMappings[16]\" \"Object.Bindings.ActionMappings.ActionMappings[18]\" \"Object.Bindings.ActionMappings.ActionMappings[19]\" \"Object.Bindings.ActionMappings.ActionMappings[20]\" \"Object.Bindings.ActionMappings.ActionMappings[21]\" \"Object.Bindings.ActionMappings.ActionMappings[22]\" \"Object.Bindings.ActionMappings.ActionMappings[23]\" \"Object.Bindings.AxisMappings.AxisMappings[9]\" "
@@ -1832,11 +1855,11 @@ CharacterMovementComponent="\"Object.NavMovement.NavAgentProps\" "
 PawnMovementComponent="\"Object.NavMovement.NavAgentProps\" "
 NavMovementComponent="\"Object.NavMovement.NavAgentProps\" "
 MovementComponent="\"Object.NavMovement.NavAgentProps\" "
-ActorComponent="\"Object.PostProcess.PostProcessSettings\" "
+ActorComponent=
 CapsuleComponent=
 ShapeComponent=
 PrimitiveComponent=
-SceneComponent="\"Object.PostProcess.PostProcessSettings\" "
+SceneComponent=
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" "
 SkeletalMeshComponent="\"Object.Collision.BodyInstance\" "
 SkinnedMeshComponent="\"Object.Collision.BodyInstance\" "
@@ -1917,4 +1940,67 @@ CameraComponent=CameraComponent.PostProcess.Lens
 BP_AnimMan_Character_Mini_C=
 K2Node_VariableGet=CapsuleComponent.Physics.ConstraintsGroup,
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bShowGrid=False
+bHideUnrelatedNodes=False
+bUseUnsortedMenus=False
+
+[MaterialEditor]
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=1
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bPlatformUsed[30]=0
+bPlatformUsed[31]=0
+bPlatformUsed[32]=0
+bPlatformUsed[33]=0
+bPlatformUsed[34]=0
+bPlatformUsed[35]=0
+bPlatformUsed[36]=0
+bPlatformUsed[37]=0
+bPlatformUsed[38]=0
+bPlatformUsed[39]=0
+bPlatformUsed[40]=0
+bPlatformUsed[41]=0
+bPlatformUsed[42]=0
+bPlatformUsed[43]=0
+bPlatformUsed[44]=0
+bPlatformUsed[45]=0
+bPlatformUsed[46]=0
+bPlatformUsed[47]=0
+bPlatformUsed[48]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
+bMaterialQualityUsed[3]=0
 
