--- a/Demo/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Demo/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -145,7 +145,7 @@ ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Waveli/Character
-ContentBrowserTab1.SelectedPaths=/Game/ChenMaterial/merged
+ContentBrowserTab1.SelectedPaths=/Game/ChenMaterial
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 
@@ -153,10 +153,10 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/ChenMaterial/Classroom_chenVersion
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=135.000 Y=96.000
+ScreenPosition=X=-1708.000 Y=222.000
 WindowSize=X=1286.000 Y=726.000
 InitiallyMaximized=True
 
@@ -179,7 +179,7 @@ BRUSH=../../../../../../DEMO/Demo/Content/
 FBX=../../../../../../DEMO/Demo/Content/
 FBXAnim=../../../../../../DEMO/Demo/Content/
 GenericImport=C:/Users/chentiancheng/Desktop/gameJam/wings4_Cube_002.FBX
-GenericExport=../../../../../../DEMO/Demo/Content/
+GenericExport=C:/Users/chentiancheng/Desktop/gameJam/T_ProjectorTexture_2.TGA
 GenericOpen=../../../../../../DEMO/Demo/Content/
 GenericSave=../../../../../../DEMO/Demo/Content/
 MeshImportExport=../../../../../../DEMO/Demo/Content/
@@ -1018,6 +1018,8 @@ BlueprintGraph.TimeStamp=2021.10.18-16.41.11
 BlueprintGraph.LastCompileMethod=Unknown
 StaticMeshEditor.TimeStamp=2021.05.19-02.06.34
 StaticMeshEditor.LastCompileMethod=Unknown
+TextureEditor.TimeStamp=2021.05.19-02.06.34
+TextureEditor.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/ChenMaterial/Classroom_chenVersion
