--- a/Demo/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Demo/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -173,19 +173,15 @@ SequenceBrowser.HiddenColumns=ParentAsset
 SequenceBrowser.HiddenColumns=PreviewSkeletalMesh
 SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/AdvancedLocomotionV4/Levels/ALS_DemoLevel
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Waveli/Weapon/BP_NerfPistol.BP_NerfPistol
-OpenAssetsAtExit=/Game/Waveli/Weapon/BP_NerfRifle.BP_NerfRifle
-OpenAssetsAtExit=/Game/Waveli/Weapon/BP_NerfCanon.BP_NerfCanon
-OpenAssetsAtExit=/Game/Waveli/Weapon/BP_BaseWeapon.BP_BaseWeapon
-OpenAssetsAtExit=/Game/Waveli/Weapon/BP_PickUp_HPPack.BP_PickUp_HPPack
-OpenAssetsAtExit=/Game/Waveli/Character/BP_ALS_AnimMan_Shooter.BP_ALS_AnimMan_Shooter
-OpenAssetsAtExit=/Game/Waveli/Weapon/BP_PickUp_Bullet.BP_PickUp_Bullet
+OpenAssetsAtExit=/Game/Waveli/AI/BT_AI_Main.BT_AI_Main
 
 [RootWindow]
 ScreenPosition=X=135.000 Y=96.000
@@ -1068,26 +1064,26 @@ MRUItem6=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 MRUItem7=/Game/OldClassroom/Maps/Classroom
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Waveli/Weapon/BP_PickUp_Bullet
-MRUItem1=/Game/Waveli/Character/BP_ALS_AnimMan_Shooter
-MRUItem2=/Game/Waveli/Weapon/BP_BasePickUp
-MRUItem3=/Game/Waveli/Weapon/BP_BasePick
-MRUItem4=/Game/Waveli/Weapon/BP_BaseWeapon
-MRUItem5=/Game/Waveli/Weapon/BP_NerfCanon
-MRUItem6=/Game/Waveli/Weapon/BP_NerfRifle
-MRUItem7=/Game/Waveli/Weapon/BP_NerfPistol
-MRUItem8=/Game/AdvancedLocomotionV4/Levels/ALS_DemoLevel
-MRUItem9=/Game/Waveli/HUD/Widget_PickUp
-MRUItem10=/Game/Waveli/Weapon/BP_Weapon_NerfCanon
-MRUItem11=/Game/Waveli/Weapon/BP_Weapon_NerfRifle
-MRUItem12=/Game/Waveli/Weapon/Enum_Weapon
-MRUItem13=/Game/Waveli/Weapon/BP_Weapon_ToyPistol
-MRUItem14=/Game/Waveli/AI/BP_ALS_AnimMan_AIShooter
-MRUItem15=/Game/Waveli/Weapon/BP_Pistol_Bullet
-MRUItem16=/Game/Waveli/Map/SampleMap
-MRUItem17=/Game/Waveli/HUD/Widget_EnemyHPBar
-MRUItem18=/Game/AdvancedLocomotionV4/Blueprints/CameraSystem/ALS_PlayerCameraManager
-MRUItem19=/Game/AdvancedLocomotionV4/Blueprints/CharacterLogic/ALS_Player_Controller
+MRUItem0=/Game/Waveli/Weapon/BP_PickUp_HPPack
+MRUItem1=/Game/Waveli/Weapon/BP_BaseWeapon
+MRUItem2=/Game/Waveli/Weapon/BP_NerfRifle
+MRUItem3=/Game/Waveli/Weapon/BP_PickUp_Bullet
+MRUItem4=/Game/Waveli/AI/BTService_BlueprintBase_New
+MRUItem5=/Game/Waveli/AI/BT_AI_Main
+MRUItem6=/Game/AdvancedLocomotionV4/Levels/ALS_DemoLevel
+MRUItem7=/Game/Waveli/Character/BP_ALS_AnimMan_Shooter
+MRUItem8=/Game/Waveli/Weapon/BP_BasePickUp
+MRUItem9=/Game/Waveli/Weapon/BP_BasePick
+MRUItem10=/Game/Waveli/Weapon/BP_NerfCanon
+MRUItem11=/Game/Waveli/Weapon/BP_NerfPistol
+MRUItem12=/Game/Waveli/HUD/Widget_PickUp
+MRUItem13=/Game/Waveli/Weapon/BP_Weapon_NerfCanon
+MRUItem14=/Game/Waveli/Weapon/BP_Weapon_NerfRifle
+MRUItem15=/Game/Waveli/Weapon/Enum_Weapon
+MRUItem16=/Game/Waveli/Weapon/BP_Weapon_ToyPistol
+MRUItem17=/Game/Waveli/AI/BP_ALS_AnimMan_AIShooter
+MRUItem18=/Game/Waveli/Weapon/BP_Pistol_Bullet
+MRUItem19=/Game/Waveli/Map/SampleMap
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -2226,6 +2222,23 @@ BP_PickUp_Bullet_C.Rendering=True
 BP_PickUp_Bullet_C.Collision=True
 BP_PickUp_Bullet_C.Actor=True
 BP_PickUp_Bullet_C.Input=True
+BehaviorTreeGraphNode_Root.AI=True
+BTComposite_Selector.Composite=True
+BTComposite_Selector.Description=True
+BlackboardData.Parent=True
+BlackboardData.Key=True
+BTService_BlueprintBase_New_C.Description=True
+BTService_BlueprintBase_New_C.Service=True
+BTDecorator_Blackboard.FlowControl=True
+BTDecorator_Blackboard.Blackboard=True
+BTDecorator_Blackboard.Description=True
+BP_PickUp_HPPack_C.Tick=True
+BP_PickUp_HPPack_C.Default=True
+BP_PickUp_HPPack_C.Replication=True
+BP_PickUp_HPPack_C.Rendering=True
+BP_PickUp_HPPack_C.Collision=True
+BP_PickUp_HPPack_C.Actor=True
+BP_PickUp_HPPack_C.Input=True
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -2269,6 +2282,11 @@ LastLogListing=PIE
 /Game/Waveli/Weapon/BP_Weapon_NerfCanon.BP_Weapon_NerfCanon=1
 /Game/Waveli/AI/BP_ALS_AnimMan_AIShooter.BP_ALS_AnimMan_AIShooter=1
 /Game/Waveli/Weapon/BP_BasePick.BP_BasePick=1
+/Game/Waveli/Weapon/BP_PickUp_HPPack.BP_PickUp_HPPack=1
+/Game/Waveli/Weapon/BP_PickUp_Bullet.BP_PickUp_Bullet=1
+/Game/Waveli/Weapon/BP_BaseWeapon.BP_BaseWeapon=1
+/Game/Waveli/Weapon/BP_NerfRifle.BP_NerfRifle=1
+/Game/Waveli/AI/BTS_UpdateInfo.BTS_UpdateInfo=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2390,8 +2408,8 @@ NavMovementComponent="\"Object.NavMovement.NavAgentProps\" "
 MovementComponent=
 ActorComponent=
 CapsuleComponent=
-ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" "
-PrimitiveComponent=
+ShapeComponent=
+PrimitiveComponent="\"Object.Lighting.LightingChannels\" "
 SceneComponent=
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" "
 SkeletalMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
@@ -2403,7 +2421,7 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 StaticMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
-DataAsset="\"Object.SkeletalMeshes\" "
+DataAsset="\"Object.Blackboard\" "
 SphereComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" "
 BP_Pistol_Bullet_C=
 ProjectileMovementComponent=
@@ -2418,6 +2436,11 @@ Visual="\"Object.Appearance.ShadowColorAndOpacity\" \"Object.Layout.Slot\" "
 CanvasPanel="\"Object.Layout.Slot\" "
 PanelWidget="\"Object.Layout.Slot\" "
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[6]\" "
+BlackboardData="\"Object.Blackboard\" "
+BehaviorTreeGraphNode_Root="\"Object.AI.AI|BehaviorTree\" "
+BehaviorTreeGraphNode="\"Object.AI.AI|BehaviorTree\" "
+AIGraphNode="\"Object.AI.AI|BehaviorTree\" "
+EdGraphNode="\"Object.AI.AI|BehaviorTree\" "
 
 [DetailCustomWidgetExpansion]
 CryptoKeysSettings=InputSettings.Bindings.ActionMappings.JumpAction,InputSettings.Bindings.ActionMappings.StanceAction,InputSettings.Bindings.ActionMappings.SprintAction,InputSettings.Bindings.ActionMappings.WalkAction,InputSettings.Bindings.ActionMappings.AimAction,InputSettings.Bindings.ActionMappings.SelectRotationMode_1,InputSettings.Bindings.ActionMappings.SelectRotationMode_2,InputSettings.Bindings.ActionMappings.CameraAction,InputSettings.Bindings.ActionMappings.RagdollAction,InputSettings.Bindings.ActionMappings.CycleOverlayUp,InputSettings.Bindings.ActionMappings.CycleOverlayDown,InputSettings.Bindings.ActionMappings.OpenOverlayMenu,InputSettings.Bindings.AxisMappings.MoveForward/Backwards,InputSettings.Bindings.AxisMappings.MoveRight/Left,InputSettings.Bindings.AxisMappings.LookUp/Down,InputSettings.Bindings.AxisMappings.LookLeft/Right,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,
@@ -2517,7 +2540,7 @@ SimpleObjectBuilder_C=CapsuleComponent.Physics.ConstraintsGroup,
 BP_BasePickUp_C=CapsuleComponent.Physics.ConstraintsGroup,
 BillboardComponent=CapsuleComponent.Physics.ConstraintsGroup,
 BP_PickUp_HP_C=CapsuleComponent.Physics.ConstraintsGroup,
-BP_PickUp_Bullet_C=CapsuleComponent.Physics.ConstraintsGroup,
+BP_PickUp_Bullet_C=
 BP_PickUp_HPPack_C=CapsuleComponent.Physics.ConstraintsGroup,
 
 [/Script/UnrealEd.PersonaOptions]
