海浪复制了一份天成的场景。
海浪复制了一份天成的场景。

--- a/Demo/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Demo/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -145,7 +145,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Waveli/Weapon
+ContentBrowserTab1.SelectedPaths=/Game/Waveli/Map
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
@@ -177,11 +177,11 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/AdvancedLocomotionV4/Levels/ALS_DemoLevel
+LastLevel=/Game/Waveli/Map/Classroom_V1
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Waveli/AI/BT_AI_Main.BT_AI_Main
+OpenAssetsAtExit=/Game/Waveli/Character/BP_ALS_AnimMan_Shooter.BP_ALS_AnimMan_Shooter
 
 [RootWindow]
 ScreenPosition=X=135.000 Y=96.000
@@ -202,7 +202,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=D:/GameJam2021/GameJ/Demo/Content/AdvancedLocomotionV4/Levels
+UNR=D:/GameJam2021/GameJ/Demo/Content/Waveli/Map
 BRUSH=../../../../../../DEMO/Demo/Content/
 FBX=../../../../../../DEMO/Demo/Content/
 FBXAnim=../../../../../../DEMO/Demo/Content/
@@ -1054,36 +1054,38 @@ PinnedCommandList.TimeStamp=2021.10.18-16.41.21
 PinnedCommandList.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/AdvancedLocomotionV4/Levels/ALS_DemoLevel
-MRUItem1=/Game/Waveli/Map/SampleMap
-MRUItem2=/Game/Maps/Classroom002
-MRUItem3=/Game/Waveli/Map/ThirdPersonExampleMap
-MRUItem4=/Game/StarterContent/Maps/Advanced_Lighting
-MRUItem5=/Game/StarterContent/Maps/Minimal_Default
-MRUItem6=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem7=/Game/OldClassroom/Maps/Classroom
+MRUItem0=/Game/Waveli/Map/Classroom_V1
+MRUItem1=/Game/ChenMaterial/Classroom_chenVersion
+MRUItem2=/Game/AdvancedLocomotionV4/Levels/ALS_DemoLevel
+MRUItem3=/Game/Waveli/Map/SampleMap
+MRUItem4=/Game/Maps/Classroom002
+MRUItem5=/Game/Waveli/Map/ThirdPersonExampleMap
+MRUItem6=/Game/StarterContent/Maps/Advanced_Lighting
+MRUItem7=/Game/StarterContent/Maps/Minimal_Default
+MRUItem8=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem9=/Game/OldClassroom/Maps/Classroom
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Waveli/Weapon/BP_PickUp_HPPack
-MRUItem1=/Game/Waveli/Weapon/BP_BaseWeapon
-MRUItem2=/Game/Waveli/Weapon/BP_NerfRifle
-MRUItem3=/Game/Waveli/Weapon/BP_PickUp_Bullet
-MRUItem4=/Game/Waveli/AI/BTService_BlueprintBase_New
-MRUItem5=/Game/Waveli/AI/BT_AI_Main
-MRUItem6=/Game/AdvancedLocomotionV4/Levels/ALS_DemoLevel
-MRUItem7=/Game/Waveli/Character/BP_ALS_AnimMan_Shooter
-MRUItem8=/Game/Waveli/Weapon/BP_BasePickUp
-MRUItem9=/Game/Waveli/Weapon/BP_BasePick
-MRUItem10=/Game/Waveli/Weapon/BP_NerfCanon
-MRUItem11=/Game/Waveli/Weapon/BP_NerfPistol
-MRUItem12=/Game/Waveli/HUD/Widget_PickUp
-MRUItem13=/Game/Waveli/Weapon/BP_Weapon_NerfCanon
-MRUItem14=/Game/Waveli/Weapon/BP_Weapon_NerfRifle
-MRUItem15=/Game/Waveli/Weapon/Enum_Weapon
-MRUItem16=/Game/Waveli/Weapon/BP_Weapon_ToyPistol
-MRUItem17=/Game/Waveli/AI/BP_ALS_AnimMan_AIShooter
-MRUItem18=/Game/Waveli/Weapon/BP_Pistol_Bullet
-MRUItem19=/Game/Waveli/Map/SampleMap
+MRUItem0=/Game/Waveli/Map/Classroom_V1
+MRUItem1=/Game/ChenMaterial/Classroom_chenVersion
+MRUItem2=/Game/Waveli/Character/BP_ALS_AnimMan_Shooter
+MRUItem3=/Game/Waveli/Weapon/BP_PickUp_HPPack
+MRUItem4=/Game/Waveli/Weapon/BP_BaseWeapon
+MRUItem5=/Game/Waveli/Weapon/BP_NerfRifle
+MRUItem6=/Game/Waveli/Weapon/BP_PickUp_Bullet
+MRUItem7=/Game/Waveli/AI/BTService_BlueprintBase_New
+MRUItem8=/Game/Waveli/AI/BT_AI_Main
+MRUItem9=/Game/AdvancedLocomotionV4/Levels/ALS_DemoLevel
+MRUItem10=/Game/Waveli/Weapon/BP_BasePickUp
+MRUItem11=/Game/Waveli/Weapon/BP_BasePick
+MRUItem12=/Game/Waveli/Weapon/BP_NerfCanon
+MRUItem13=/Game/Waveli/Weapon/BP_NerfPistol
+MRUItem14=/Game/Waveli/HUD/Widget_PickUp
+MRUItem15=/Game/Waveli/Weapon/BP_Weapon_NerfCanon
+MRUItem16=/Game/Waveli/Weapon/BP_Weapon_NerfRifle
+MRUItem17=/Game/Waveli/Weapon/Enum_Weapon
+MRUItem18=/Game/Waveli/Weapon/BP_Weapon_ToyPistol
+MRUItem19=/Game/Waveli/AI/BP_ALS_AnimMan_AIShooter
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -2405,8 +2407,8 @@ InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[2]\" \"Object.Bin
 CharacterMovementComponent="\"Object.NavMovement.NavAgentProps\" "
 PawnMovementComponent="\"Object.NavMovement.NavAgentProps\" "
 NavMovementComponent="\"Object.NavMovement.NavAgentProps\" "
-MovementComponent=
-ActorComponent=
+MovementComponent="\"Object.NavMovement.NavAgentProps\" "
+ActorComponent="\"Object.NavMovement.NavAgentProps\" "
 CapsuleComponent=
 ShapeComponent=
 PrimitiveComponent="\"Object.Lighting.LightingChannels\" "
@@ -2518,7 +2520,7 @@ BP_AnimMan_Character_Mini_C=
 K2Node_VariableGet=CapsuleComponent.Physics.ConstraintsGroup,
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 UMG_GameStart_C=
-BP_ALS_AnimMan_Shooter_C=CapsuleComponent.Physics.ConstraintsGroup,
+BP_ALS_AnimMan_Shooter_C=
 K2Node_VariableSet=CapsuleComponent.Physics.ConstraintsGroup,
 BP_Pistol_Bullet_C=CapsuleComponent.Physics.ConstraintsGroup,
 StaticMeshComponent=
